--- a/index.html
+++ b/index.html
@@ -8,41 +8,54 @@
   <body>
     <button
       onclick="
-        console.log(cekMenangKalah('Rock'));
+      cekMenangKalah('Rock');
     "
     >
       Rock
     </button>
+
     <button
       onclick="
-    console.log(cekMenangKalah('Papper'));
+      cekMenangKalah('Papper');
     "
     >
       Papper
     </button>
+
     <button
       onclick="
-    console.log(cekMenangKalah('Scissors'));
+      cekMenangKalah('Scissors');
     "
     >
       Scissors
     </button>
 
+    <button
+      onclick="
+      score.win = 0;
+      score.tie = 0;
+      score.lose = 0; 
+      localStorage.removeItem('score');
+      alert('Your score has been reset')
+      
+    "
+    >
+      Reset Score
+    </button>
+
     <script>
-        
-      function pickComputerMove() {
-        let computerMove = "";
-        let randomNumber = Math.random();
-        if (randomNumber > 0 / 3 && randomNumber < 1 / 3) {
-          computerMove = "Rock";
-        } else if (randomNumber > 1 / 3 && randomNumber < 2 / 3) {
-          computerMove = "Papper";
-        } else if (randomNumber > 2 / 3 && randomNumber < 3 / 3) {
-          computerMove = "Scissors";
-        }
-        return computerMove;
+      //ambil data score di localstorage, data di json string makanya pake json.parse
+      let score = JSON.parse(localStorage.getItem("score"));
+      //cek score, kalo gaada nilai di variable score, pas setelah klik rest button local storage dihapus soalnya
+      if (score === null) {
+        score = {
+          win: 0,
+          lose: 0,
+          tie: 0,
+        };
       }
 
+      //maen
       function cekMenangKalah(playermove) {
         const computerMove = pickComputerMove();
 
@@ -54,9 +67,6 @@
           } else if (computerMove === "Scissors") {
             result = "You Win";
           }
-          alert(
-            `You pick ${playermove} computer pick ${computerMove} ${result}`
-          );
         } else if (playermove === "Papper") {
           if (computerMove === "Rock") {
             result = "You Win";
@@ -65,9 +75,6 @@
           } else if (computerMove === "Scissors") {
             result = "You Lose";
           }
-          alert(
-            `You pick ${playermove} computer pick ${computerMove} ${result}`
-          );
         } else if (playermove === "Scissors") {
           if (computerMove === "Rock") {
             result = "You Lose";
@@ -76,10 +83,36 @@
           } else if (computerMove === "Scissors") {
             result = "Tie";
           }
-          alert(
-            `You pick ${playermove} computer pick ${computerMove} ${result}`
-          );
         }
+
+        //cek score
+        if (result === "You Win") {
+          score.win += 1;
+        } else if (result === "You Lose") {
+          score.lose += 1;
+        } else if (result === "Tie") {
+          score.tie += 1;
+        }
+
+        //simpan ke localstorage pake json
+        localStorage.setItem("score", JSON.stringify(score));
+
+        alert(`You pick ${playermove} computer pick ${computerMove} ${result}
+        win ${score.win} loses ${score.lose} Ties ${score.tie}`);
+      }
+
+      //computer random move
+      function pickComputerMove() {
+        let computerMove = "";
+        let randomNumber = Math.random();
+        if (randomNumber > 0 / 3 && randomNumber < 1 / 3) {
+          computerMove = "Rock";
+        } else if (randomNumber > 1 / 3 && randomNumber < 2 / 3) {
+          computerMove = "Papper";
+        } else if (randomNumber > 2 / 3 && randomNumber < 3 / 3) {
+          computerMove = "Scissors";
+        }
+        return computerMove;
       }
     </script>
   </body>
